--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,15 +1,27 @@
 .sidebar{
-    position: fixed;
+    /* position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     background-color: #eee;
     padding: 0;
     padding-top: 60px;
-    box-shadow: inset 0 0 2px gray;
+    box-shadow: inset 0 0 2px gray; */
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    padding-top: 60px;
+    top:0;
+    background-color: #eee;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
 }
 .sidebar a{
     display: block;
+    color:  #333;
+    padding: 16px;
+    text-decoration: none;
 }
 .sidebar ul{
     margin: 0;
@@ -19,15 +31,47 @@
     list-style: none;
 }
 .sidebar ul li a{
-    display: block;
+    /* display: block;
     color: #333;
     padding: 5px 10px;
     box-sizing: border-box;
     margin: 5px 0 5px 10px;
     border-radius: 5px 0 0 5px;
+    text-decoration: none; */
+    display: block;
+    color:  #333;
+    padding: 16px;
     text-decoration: none;
 }
 .sidebar ul li a.active{
     background: #333;
     color: #fff;
 }
+.sidebar ul li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+}
+@media screen and (max-width: 700px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+      padding-top: 2px;
+      position: relative;
+    }
+    .sidebar ul li a {float: left;}
+    div.content {
+        margin-left: 0;
+        padding-top: 10px;
+    }
+  }
+  @media screen and (max-width: 450px) {
+    .sidebar ul li a {
+      text-align: center;
+      float: none;
+    }
+  }
